--- a/resources/views/home.html
+++ b/resources/views/home.html
@@ -27,7 +27,7 @@
 
       .paket{
         background-color:bg-white;
-        background-image: url('img/bg.jpg');
+        background-image: url('img/bg2.png');
 
 
       }
@@ -150,10 +150,34 @@
     <div class="paket p-3">
 
       <div class="container">
-        <div class="row mb-3">
+
+        <!-- profile -->
+        <div class="row">
 
           <div class="" style="margin-top: 30px; margin-bottom: 5px;">
-            <h2 class="text-center">PAKET KELAS BERKUDA</h2>
+            <h2 class="text-center">YAKIN BERANI BERKUDA?</h2>
+            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus eaque, sed at tempore veniam labore est quibusdam sit accusamus molestiae hic eum! Dolores modi atque enim accusantium veniam cupiditate rerum?</p>
+
+          </div>
+          <div class="bg-warning m-auto" style="width:30px;hight:1px;padding:1px;"></div>
+
+          <div class="d-flex justify-content-center">
+
+            <iframe width="700" height="400" src="https://www.youtube.com/embed/bdcWkTm9lNo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+          </div>
+
+
+
+
+        </div>
+
+
+
+        <div class="row mb-3">
+
+          <div class="" style="margin-top: 60px; margin-bottom: 5px;">
+            <h2 class="text-center">PILIHAN PAKET</h2>
           </div>
           <div class="bg-warning m-auto" style="width:30px;hight:1px;padding:1px;"></div>
     
@@ -162,30 +186,33 @@
         <div class="row justify-content-center mt-3">
 
 
-          <div class="card m-2" style="width: 18rem; background-color: rgb(0, 0, 0,0); border:0px;">
+          <div class="card m-2 bg-white" style="width: 18rem; border:0px;">
             <img src="img/h1-single-img-1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">TRIAL</h5>
+              <h2>Rp. 50K</h2>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">More</a>
+              <a class="btn btn-lg btn-outline-warning text-warning tombo-slider"  href="">BOOKING</a>
             </div>
           </div>
 
-          <div class="card m-2" style="width: 18rem; background-color: rgb(0, 0, 0,0); border:0px;">
+          <div class="card m-2 bg-white" style="width: 18rem; border:0px;">
             <img src="img/h1-single-img-1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">MEMBER</h5>
+              <h2>Rp. 300K</h2>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">More</a>
+              <a href="#" class="btn btn-lg btn-warning text-white tombo-slider">BOOKING</a>
             </div>
           </div>
 
-          <div class="card m-2" style="width: 18rem; background-color: rgb(0, 0, 0,0); border:0px;">
+          <div class="card m-2 bg-white" style="width: 18rem;  border:0px;">
             <img src="img/h1-single-img-1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">GROUP</h5>
+              <h2>Rp. 100K/orang</h2>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">More</a>
+              <a href="#" class="btn btn-lg btn-outline-warning text-warning tombo-slider">BOOKING</a>
             </div>
           </div>
 
@@ -218,13 +245,117 @@
 
     </section>
 
+    <section class="pb-5 pt-4" style="background-color: #FEFAF1;background-image: url('img/bg2.png');">
+      <div class="container">
+        <div class="row" >
+
+          <div class="" style="margin-top: 30px; margin-bottom: 5px;">
+            <h2 class="text-center">TOP STORY</h2>
+          </div>
+          <div class="bg-warning m-auto" style="width:30px;hight:1px;padding:1px;"></div>
+
+        </div>
+        <!-- Akhir row -->
+
+        <div class="row mt-5">
+          <div class="col-md-8">
+
+              <div>
+                <iframe width="700" height="400" src="https://www.youtube.com/embed/bdcWkTm9lNo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+              </div>
+
+          </div>
+          <div class="col-md-4">
+            <div class="row">
+              <h4>LATEST NEWS</h4>
+            </div>
+
+            <!-- list card kecil -->
+            <div class="row mt-1">
+              <div class="col-md-4">
+                  <img src="img/h1-single-img-1.jpg" alt="" width="110" height="67">
+              </div>
+              <div class="col-md-8">
+                <p>Jalan-santai di pinggir Sungai</p>
+                <p>9 Okt 2021</p>
+              </div>
+            </div>
+
+            <!-- list card kecil -->
+            <div class="row mt-1">
+              <div class="col-md-4">
+                  <img src="img/h1-single-img-1.jpg" alt="" width="110" height="67">
+              </div>
+              <div class="col-md-8">
+                <p>Jelajahi Hutan Gunung Salak</p>
+                <p>9 Okt 2021</p>
+              </div>
+            </div>
+
+            <!-- list card kecil -->
+            <div class="row mt-1">
+              <div class="col-md-4">
+                  <img src="img/h1-single-img-1.jpg" alt="" width="110" height="67">
+              </div>
+              <div class="col-md-8">
+                <p>Wisata terbaik untuk keluarga</p>
+                <p>9 Okt 2021</p>
+              </div>
+            </div>
+
+            <!-- list card kecil -->
+            <div class="row mt-1">
+              <div class="col-md-4">
+                  <img src="img/h1-single-img-1.jpg" alt="" width="110" height="67">
+              </div>
+              <div class="col-md-8">
+                <p>Ajarkan anak-anak keberanian menaiki kuda</p>
+                <p>9 Okt 2021</p>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+    </section>
+
 
 
 
 
     <footer>
-      tes
+      <div class="container pt-5">
+        <div class="row text-white">
+
+            <div class="col-md-4">
+              <h3>OUR STORY</h3>
+              <p>Donec sodales sagittis magna. Sed conse quat, leo eget bibendum sodales, augue velit cursus nunc. Aenean commodo ligu sodales parturient montes.</p>
+            </div>
+
+            <div class="col-md-4">
+              <h4>MEDIA SOSIAL</h4>
+              <ul>
+                <li>Facebook</li>
+                <li>Instagram Story</li>
+                <li>Telegram</li>
+              </ul>
+            </div>
+
+            <div class="col-md-4">
+              <h4>Lokasi</h4>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum quisquam tenet</p>
+              map here
+            </div>
+
+
+        </div>
+      </div>
+
+
     </footer>
+
 
 
 
